manual improved Pr4+ included code cleaning for new compiler standards in cfield

--- a/doc/li120914.bib
+++ b/doc/li120914.bib
@@ -1,4 +1,24 @@
+@article{edvardsson98-230,
+title={CRole of the electrostatic model in calculating rare-earth crystal field parameters},
+author={Edvardsson, S. and Klintenberg, M.},
+journal = {J. Alloys and Comp.},
+  volume = {275-277},
+  pages = {230-233},
+  year = {1998},
+  publisher = {Elsivier}
+ }
 
+
+@article{roman23-125137,
+title={Charge density wave and crystalline electric field effects in TmNiC$_2$},
+author={Roman, M. and Fritthum, M. and Stoeger, B. and Adroja, D.T. and Michor, H.},
+journal = {Phys. Rev. B},
+  volume = {107},
+  pages = {125137},
+  year = {2023},
+  publisher = {American Physical Society},
+url={https://doi.org/10.1103/PhysRevB.107.125137}
+ }
 
 @article{jensen88-9495,
   title = {Rotational invariance and dipolar magnetoelastic effects: Application to TmSb},
