--- a/doc/cfparconventions.tex
+++ b/doc/cfparconventions.tex
@@ -17,8 +17,12 @@ prefactors $p_{lm}$. The Stevens crystal field Hamiltonian is thus
 \noindent where the product $A_{lm} \langle r^l \rangle$ is commonly taken in the literature as the crystal
 field parameter, because the factorisation into an intrinsic parameter $A_{lm}$ and the expectation value of
 the radial wavefunction $\langle r^l \rangle$ is derived from the point charge model and is not generally
-valid. Alternatively, the product $B_l^m = A_{lm} \langle r^l \rangle \langle J || \theta_l || J \rangle$ is
-also commonly used, particularly in the neutron scattering literature. $ \theta_l= \langle J || \theta_l || J \rangle$ are the Stevens factors:  for $l=0,2,4,6$ these correspond to the number of electrons in the unfilled shell $\nu,\alpha_J,\beta_J,\gamma_J$, respectively.
+valid. Alternatively, 
+the product $B_l^m = A_{lm} \langle r^l \rangle \langle J || \theta_l || J \rangle$ is
+also commonly used, particularly in the neutron scattering literature. 
+$ \theta_l= \langle J || \theta_l || J \rangle$ are the Stevens 
+factors:  for $l=0,2,4,6$ these correspond to the number of electrons 
+in the unfilled shell $\nu,\alpha_J,\beta_J,\gamma_J$, respectively.
 
 Wybourne~\cite{wybourne65} and subsequent co-authors on the other hand chose to use the tensor operators 
 $\hat{C}_{lm}$ which transform in the same way as the functions $C_{lm}(\theta,\phi) = \sqrt{4\pi / (2l+1)}
